<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.jjkay03</groupId>
  <artifactId>NationsEvent</artifactId>
  <version>NS7</version>
  <packaging>jar</packaging>

  <name>NationsEvent</name>

  <properties>
    <java.version>1.8</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <kotlin.version>1.9.23</kotlin.version>
  </properties>
    <url>https://jjkay03.com/</url>

    <build>
    <plugins>
        <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.4</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
        <plugin>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-maven-plugin</artifactId>
            <version>${kotlin.version}</version>
            <executions>
                <execution>
                    <id>compile</id>
                    <phase>compile</phase>
                    <goals>
                        <goal>compile</goal>
                    </goals>
                </execution>
                <execution>
                    <id>test-compile</id>
                    <phase>test-compile</phase>
                    <goals>
                        <goal>test-compile</goal>
                    </goals>
                </execution>
            </executions>
            <configuration>
                <jvmTarget>1.8</jvmTarget>
            </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
            <executions>
                <execution>
                    <id>default-compile</id>
                    <phase>none</phase>
                </execution>
                <execution>
                    <id>default-testCompile</id>
                    <phase>none</phase>
                </execution>
                <execution>
                    <id>compile</id>
                    <phase>compile</phase>
                    <goals>
                        <goal>compile</goal>
                    </goals>
                </execution>
                <execution>
                    <id>testCompile</id>
                    <phase>test-compile</phase>
                    <goals>
                        <goal>testCompile</goal>
                    </goals>
                </execution>
            </executions>
            <configuration>
            <source>21</source>
            <target>21</target>
                <compilerArgs>--enable-preview</compilerArgs>
            </configuration>
        </plugin>
    </plugins>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
  </build>

  <repositories>
      <repository>
          <id>sonatype</id>
          <url>https://oss.sonatype.org/content/groups/public/</url>
      </repository>
      <repository>
          <id>jitpack.io</id>
          <url>https://jitpack.io</url>
      </repository>
      <!-- PaperMC API -->
      <repository>
          <id>papermc-repo</id>
          <url>https://repo.papermc.io/repository/maven-public/</url>
      </repository>
      <!-- Placeholder API -->
      <repository>
          <id>placeholderapi</id>
          <url>https://repo.extendedclip.com/releases/</url>
      </repository>
      <!-- Simple Voice Chat API -->
      <repository>
          <id>maxhenkel</id>
          <url>https://maven.maxhenkel.de/repository/public</url>
      </repository>
  </repositories>

  <dependencies>
      <!-- Kotlin -->
      <dependency>
          <groupId>org.jetbrains.kotlin</groupId>
          <artifactId>kotlin-stdlib-jdk8</artifactId>
          <version>${kotlin.version}</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>org.jetbrains.kotlin</groupId>
          <artifactId>kotlin-test</artifactId>
          <version>${kotlin.version}</version>
          <scope>test</scope>
      </dependency>

      <!-- PaperMC -->
      <dependency>
          <groupId>io.papermc.paper</groupId>
          <artifactId>paper-api</artifactId>
          <version>1.21.8-R0.1-SNAPSHOT</version>
          <scope>provided</scope>
      </dependency>

      <!-- Folia -->
      <dependency>
          <groupId>dev.folia</groupId>
          <artifactId>folia-api</artifactId>
          <version>1.21.8-R0.1-SNAPSHOT</version>
          <scope>provided</scope>
      </dependency>

      <!-- IPVP Canvas -->
      <dependency>
          <groupId>org.ipvp</groupId>
          <artifactId>canvas</artifactId>
          <version>1.7.0-SNAPSHOT</version>
          <scope>compile</scope>
      </dependency>

      <!-- LuckPerms API -->
      <dependency>
          <groupId>net.luckperms</groupId>
          <artifactId>api</artifactId>
          <version>5.4</version>
          <scope>provided</scope>
      </dependency>

      <!-- Placeholder API -->
      <dependency>
          <groupId>me.clip</groupId>
          <artifactId>placeholderapi</artifactId>
          <version>2.11.6</version>
          <scope>provided</scope>
      </dependency>

      <!-- Simple Voice Chat API -->
      <dependency>
          <groupId>de.maxhenkel.voicechat</groupId>
          <artifactId>voicechat-api</artifactId>
          <version>2.6.0</version>
          <scope>provided</scope>
      </dependency>
  </dependencies>
</project>
